modify Fig and count parameters

--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -153,7 +153,7 @@ and there are migrant individuals between the two populations. also no populatio
 \begin{figure}[!h]
 	\begin{center}
 		\includegraphics[width=0.3\textwidth]{/Users/akita/Dropbox/research/close_kin/Mig/Figs/cartoon.eps}
-		\caption{Example of relationships between mothers and their offspring number. The open, gray, and filled circles represent mothers, their eggs, and their offspring, respectively. The area of an open circle indicates the degree of reproductive potential of each mother (i.e., $\lambda_i$). The dotted and thin arrows denote mother--egg and egg--offspring relationships, respectively. The symbol x denotes a failure to survive at sampling. Sampled individuals are denoted with squares. In this example, $M=6$, }
+		\caption{Example of relationships between mothers and their offspring number. The open, gray, and filled circles represent mothers, their eggs, and their offspring, respectively. The area of an open circle indicates the degree of reproductive potential of each mother (i.e., $\lambda_i$). The dotted and thin arrows denote mother--egg and egg--offspring relationships, respectively. The symbol x denotes a failure to survive at sampling. Sampled individuals are denoted with squares. Input parameters in this example: $n_{\rm P, 1}=4$, $n_{\rm P, 2}=4$, $n_{\rm O, 1}=4$, $n_{\rm O, 2}=4$, $N_{1}=16$, $N_{2}=14$, and $M=6$. The numbers of kinship pairs: $H_{\rm PO, 1}=1$, $H_{\rm PO, 2}=1$, $H_{\rm PO, bet}=1$, and $H_{\rm HS, bet}=2$.	}
 		\label{cartoon}
 	\end{center}
 \end{figure}
