write theory section, #6

--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -67,8 +67,7 @@ Estimating the number of migrants among the populations is essential for underst
 応用例として，３年間にわたって２つのサブ集団からサンプルされた当歳魚から見出される半兄弟ペアをもとに，個体数・移動率・生存率を推定する枠組みを提示する。そこでは，同じサブ集団から年を跨いで見つかる半兄弟ペアに基づく関係式と，今回新たに開発した関係式を組み合わせて用いる。
 
 \section{Theory}\label{sec2}
-In this section, we derivate the estimators of migrant number and migration rates using HS pairs or PO pairs found between two populations. While the estimators can hold under complex assumptions for reproduction theoretical foundation for estimating
-このセクションでは、migrantやmigration rateの推定量を導出する。導出された推定量は、付録にある通りフレキシブルな仮定のもとでも成立するが、ここではシンプルな状況を例に出して説明する。The main symbols used in the current paper are summarized in Table \ref{symbols}.
+In this section, we present the theoretical foundation for estimating a migrant number and a migration rate using HS or PO pairs, which are found between two populations with a different sample timing. While the estimators can hold under flexible assumptions for reproduction (see {\bf Appendix}), here we assume a relatively simple situation for explanation purposes. It should be noted that the formulation of the estimators, presented in Equations 4-5 and 7-8, is a function with parent numbers in the two populations; in the next section, we provide the treatment for estimating the unknown parent numbers from genetic dataset which is used for obtaining HS or PO pairs. The main symbols used in the current paper are summarized in Table \ref{symbols}. 
 
 \renewcommand{\arraystretch}{0.6}
 \begin{table}[tb]
